--- a/线程基础/线程.md
+++ b/线程基础/线程.md
@@ -18,7 +18,7 @@
 - 继承Thread类，重写run方法
 - 实现Runnable，重写run方法
 
-![image-20220510203640007](https://gitee.com/Aaustin/harehouse/raw/master/img/202205102036121.png)
+![image-20220510203640007](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205102036121.png)
 
 ### 继承Thread
 
@@ -65,7 +65,7 @@ class cat extends Thread {
 }
 ```
 
-![image-20220510211558937](https://gitee.com/Aaustin/harehouse/raw/master/img/202205102115991.png)
+![image-20220510211558937](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205102115991.png)
 
 分析：在启动程序后会先创建出一个进程，然后进程会开启一个主线程，主线程会开启一个子线程，如果主线程先执行完任务挂掉后，子线程还是会存在继续执行任务，子线程结束任务后，进程才会结束。
 
@@ -75,7 +75,7 @@ class cat extends Thread {
 
 这里的run方法就是一个普通的方法，它没有开启一个线程，必须等它执行完才可以执行后面的语句，所以用run并无法开启一个多线程。只有start了才会开启这个线程
 
-![image-20220510214727103](https://gitee.com/Aaustin/harehouse/raw/master/img/202205102147150.png)
+![image-20220510214727103](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205102147150.png)
 
 ### 实现Runnable接口
 
@@ -165,7 +165,7 @@ class ThreadProxy implements Runnable{
 
 ## 如何理解线程
 
-![image-20220511084617202](https://gitee.com/Aaustin/harehouse/raw/master/img/202205110846259.png)
+![image-20220511084617202](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205110846259.png)
 
 在main线程、子线程1、子线程2都完成后进程才会结束
 
@@ -174,7 +174,7 @@ class ThreadProxy implements Runnable{
 1. 从java的设计来看，本质上没有什么区别，Thread本身就实现Runnable接口，底层都是start()->start0()
 2. 实现Runnable的方式更适合多个线程共享一个资源的情况，并且避免了单线程的限制
 
-![image-20220511085404800](https://gitee.com/Aaustin/harehouse/raw/master/img/202205110854848.png)
+![image-20220511085404800](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205110854848.png)
 
 - 建议使用Runnable接口
 
@@ -223,7 +223,7 @@ class T extends Thread{
 - start() 使用该线程开始执行。虚拟机底层调用start0方法
 - run() 调用线程对象run方法
 - setPriority.  更改线程的优先级
-  - ![image-20220511095912555](https://gitee.com/Aaustin/harehouse/raw/master/img/202205110959612.png)
+  - ![image-20220511095912555](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205110959612.png)
 - getPriority   获取线程优先级
 - sleep 线程休眠
 - interrupt  中断线程 ，注意不是终止. 一般用于正在休眠的线程
@@ -233,7 +233,7 @@ class T extends Thread{
 
 **插队的案例**
 
-![image-20220511105929184](https://gitee.com/Aaustin/harehouse/raw/master/img/202205111059227.png)
+![image-20220511105929184](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205111059227.png)
 
 ```java
 public class ThreadMethod02 {
@@ -305,7 +305,7 @@ class MyDaemonThread extends Thread{
 
 ## 线程的声明周期
 
-![image-20220511203640310](https://gitee.com/Aaustin/harehouse/raw/master/img/202205112036411.png)
+![image-20220511203640310](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205112036411.png)
 
 ### 六种状态
 
@@ -452,7 +452,7 @@ class SellTicket extends Thread{
 
 ### 分析同步原理
 
-![image-20220511161813434](https://gitee.com/Aaustin/harehouse/raw/master/img/202205111618528.png)
+![image-20220511161813434](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205111618528.png)
 
 不同的线程去抢同一把锁，当抢到锁的线程执行完方法后，再把锁还回去
 
@@ -589,7 +589,7 @@ class DeadlockDemo extends Thread {
 
 ## 编程题
 
-1. ![image-20220511215517029](https://gitee.com/Aaustin/harehouse/raw/master/img/202205112155150.png)
+1. ![image-20220511215517029](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205112155150.png)
 
 ```java
 public class HomeWork01 {
@@ -645,7 +645,7 @@ class ReceiveLetter extends Thread{
 }
 ```
 
-2. ![image-20220511215620545](https://gitee.com/Aaustin/harehouse/raw/master/img/202205112156642.png)
+2. ![image-20220511215620545](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205112156642.png)
 
 ```java
 public class HomeWork02 {
