--- a/统一结果返回类/04-统一返回结果对象.md
+++ b/统一结果返回类/04-统一返回结果对象.md
@@ -77,7 +77,7 @@
 \==============
 
 ## 1、在common模块下创建子模块common-utils
-![image](https://gitee.com/Aaustin/harehouse/raw/master/img/202205131046780.png)
+![image](https://pic-es.oss-cn-shanghai.aliyuncs.com/harehouse-master/img/202205131046780.png)
 
 2、创建接口定义返回码  
 
